--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,14 +8,35 @@
 
     <!-- rep range spinner -->
     <string-array name="spinner_items">
-        <item>1 to 3 reps</item>
-        <item>3 to 6 reps</item>
-        <item>6 to 10 reps</item>
-        <item>8 to 12 reps</item>
-        <item>12 to 15 reps</item>
-        <item>15 to 20 reps</item>
+        <item>1-3 reps</item>
+        <item>3-6 reps</item>
+        <item>6-10 reps</item>
+        <item>8-12 reps</item>
+        <item>12-15 reps</item>
+        <item>15-20 reps</item>
     </string-array>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- button values -->
+    <string name="button_save">Save</string>
+    <string name="button_select">Select</string>
+    <string name="button_update">Update</string>
+    <string name="button_cancel">Cancel</string>
+
+    <!-- default values -->
+    <string name="name">Name</string>
+    <string name="exercise_name">Exercise name</string>
+    <string name="workout_name">Workout name</string>
+    <string name="week_name">Week name</string>
+    <string name="week_day">Week day</string>
+    <string name="description">Description</string>
+    <string name="reps">Repetitions</string>
+    <string name="sets">Number of sets</string>
+    <string name="setsNum">2</string>
+
+    <!-- home fragment -->
+    <string name="hello_user">Hello %1$s,</string>
+    <string name="welcome_back">welcome back.</string>
+    <string name="ready_to_do">Ready to do what you love today?</string>
+    <string name="what_week">What week of training are you using?</string>
 
 </resources>
