--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
 
     <!-- default values -->
     <string name="name">Name</string>
+    <string name="weeks">Weeks</string>
+    <string name="workouts">Workouts</string>
     <string name="user_name">User Name</string>
     <string name="exercise_name">Exercise name</string>
     <string name="workout_name">Workout name</string>
