Finalização do projeto.

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -23,6 +23,7 @@
     <string name="welcome_back">bem vindo de volta.</string>
     <string name="ready_to_do">Pronto para fazer o que ama hoje?</string>
     <string name="what_week">Qual semana de treino você está utilizando?</string>
+    <string name="q_what_is">O que é o planejador de treino?</string>
     <string name="sunday">Domingo</string>
     <string name="monday">Segunda-feira</string>
     <string name="tuesday">Terça-feira</string>
@@ -79,48 +80,8 @@
     <string name="delete_week_message">Tem certeza que deseja excluir esta semana?</string>
     <string name="rest_day">Descanso</string>
     <string name="rest_day_description">Dia de ficar em casa</string>
-    <string name="abc_workout">Planilha de treino ABC</string>
-    <string name="abc_workout_description">Plano de treino para iniciantes, três vezes por semana.</string>
-    <string name="A_workout">Treino A</string>
-    <string name="A_workout_description">Treino de costas para iniciantes, foco em costas, bíceps e ombros.</string>
-    <string name="lat_pulldown">Puxada alta</string>
-    <string name="lat_pulldown_description">Foco em dorsais, descansar 45 a 90 segundos.</string>
-    <string name="lat_pulldown_sets_and_reps">6 séries, 10 a 15 repetições</string>
-    <string name="low_row">Remada baixa</string>
-    <string name="low_row_description">Foco na parte inferior das costas, descansar 60 a 75 segundos.</string>
-    <string name="low_row_sets_and_reps">6 séries, 8 a 12 repetições</string>
-    <string name="hammer_curl">Rosca martelo</string>
-    <string name="hammer_curl_description">Foco no bíceps braquial, descansar 30 a 50 segundos.</string>
-    <string name="hammer_curl_sets_and_reps">4 séries, 6 a 8 repetições</string>
-    <string name="seated_reverse_fly">Crucifíxo invertido</string>
-    <string name="seated_reverse_fly_description">Foco no posterior de ombro, descansar 45 a 60 segundos.</string>
-    <string name="seated_reverse_fly_sets_and_reps">4 séries, 12 a 15 repetições.</string>
-    <string name="B_workout">Treino B</string>
-    <string name="B_workout_description">Treino de empurrar para iniciantes, foco em peito, ombro e tríceps.</string>
-    <string name="bench_press">Supino reto</string>
-    <string name="bench_press_description">Foco em peitoral, descansar 60 a 90 segundos.</string>
-    <string name="bench_press_sets_and_reps">6 séries, 6 a 8 repetições</string>
-    <string name="inclined_bench_press">Supino inclinado</string>
-    <string name="inclined_bench_press_description">Foco em peitoral superior, descansar 60 a 9 segundos.</string>
-    <string name="inclined_bench_press_sets_and_reps">4 séries, 8 a 12 repetições</string>
-    <string name="cable_triceps_extension">Extensão de tríceps no cabo.</string>
-    <string name="cable_triceps_extension_description">Foco no tríceps, descansar 45 a 6 segundos.</string>
-    <string name="cable_triceps_extension_sets_and_reps">4 séries, 10 a 12 repetições</string>
-    <string name="lateral_raise">Elevação lateral</string>
-    <string name="lateral_raise_description">Foco em ombro, descansar 60 a 90 segundos.</string>
-    <string name="lateral_raise_sets_and_reps">3 séries, 15 a 20 repetições</string>
-    <string name="C_workout">Treino C</string>
-    <string name="C_workout_description">Treino de perna para iniciantes, foco em quadríceps, posterior e panturrilhas.</string>
-    <string name="squat">Agachamento</string>
-    <string name="squat_description">Foco em quadríceps e glúteos, descansar 60 a 90 segundos.</string>
-    <string name="squat_sets_and_reps">8 séries, 6 a 8 repetições</string>
-    <string name="stiff">Stiff</string>
-    <string name="stiff_description">Foco em posterior de coxa, descansar 60 a 90 segundos.</string>
-    <string name="stiff_sets_and_reps">6 séries, 10 a 12 repetições</string>
-    <string name="leg_press">Leg press</string>
-    <string name="leg_press_description">Foco em quadríceps, descansar 90 a 120 segundos.</string>
-    <string name="leg_press_sets_and_reps">4 séries, 12 a 15 repetições</string>
-    <string name="seated_calves">Panturrilha sentado</string>
-    <string name="seated_calves_description">Foco em panturrilha, descansar 45 a 60 segundos.</string>
-    <string name="seated_calves_sets_and_reps">4 séries, 15 a 20 repetições</string>
+    <string name="need_help"><u>Precisa de ajuda?</u></string>
+    <string name="ans_what_is">Planejador de treino é um aplicativo para você criar treinos de forma facilitada e usá-los na academia, sem necessidade de fichas de treino físicas.</string>
+    <string name="ans_getting_started">Para iniciar, crie seu primeiro treino, e adicione os exercícios que deseja fazer nele. Após criar alguns treinos, crie uma semana e atribua os treinos criados à seus respectivos  dias, então selecione a semana  que ficará ativa no menu home.</string>
+    <string name="q_getting_started">Como começar</string>
 </resources>
